; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_aureal.c_auchan_getptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_aureal.c_auchan_getptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.au_chinfo = type { i64, %struct.au_info* }
%struct.au_info = type { i32 }

@PCMDIR_PLAY = common dso_local global i64 0, align 8
@AU_REG_UNK2 = common dso_local global i32 0, align 4
@AU_BUFFSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @auchan_getptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @auchan_getptr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.au_chinfo*, align 8
  %7 = alloca %struct.au_info*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.au_chinfo*
  store %struct.au_chinfo* %9, %struct.au_chinfo** %6, align 8
  %10 = load %struct.au_chinfo*, %struct.au_chinfo** %6, align 8
  %11 = getelementptr inbounds %struct.au_chinfo, %struct.au_chinfo* %10, i32 0, i32 1
  %12 = load %struct.au_info*, %struct.au_info** %11, align 8
  store %struct.au_info* %12, %struct.au_info** %7, align 8
  %13 = load %struct.au_chinfo*, %struct.au_chinfo** %6, align 8
  %14 = getelementptr inbounds %struct.au_chinfo, %struct.au_chinfo* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @PCMDIR_PLAY, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %2
  %19 = load %struct.au_info*, %struct.au_info** %7, align 8
  %20 = load i32, i32* @AU_REG_UNK2, align 4
  %21 = call i32 @au_rd(%struct.au_info* %19, i32 0, i32 %20, i32 4)
  %22 = load i32, i32* @AU_BUFFSIZE, align 4
  %23 = sub nsw i32 %22, 1
  %24 = and i32 %21, %23
  store i32 %24, i32* %3, align 4
  br label %26

25:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %18
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @au_rd(%struct.au_info*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
